--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "font-awesome": "^4.5.0",
     "jade": "~1.11.0",
     "jquery": "^2.2.2",
+    "metismenu": "^2.5.0",
     "moment": "^2.12.0",
     "mongoose": "^4.4.10",
     "mongoose-paginate": "^5.0.0",
