--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "font-awesome": "^4.5.0",
+    "ims-lti": "^2.1.6",
     "jade": "~1.11.0",
     "jquery": "^2.2.2",
     "metismenu": "^2.5.0",
@@ -25,9 +26,11 @@
     "mongoose-paginate": "^5.0.0",
     "morgan": "^1.6.1",
     "multer": "^1.1.0",
+    "oauth": "^0.9.14",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.0",
     "passport-local": "^1.0.0",
+    "passport-lti": "0.0.5",
     "serve-favicon": "~2.3.0",
     "sharp": "^0.14.1",
     "underscore": "^1.8.3"
